fix form visibility for re-run

--- a/autoreduce_frontend/static/css/base.css
+++ b/autoreduce_frontend/static/css/base.css
@@ -228,6 +228,10 @@ a.back {
     transform-style: preserve-3d;
 }
 
+.variables-buttons{
+    padding-top: 10px;
+}
+
 @media screen and (min-width: 767px) {
     .run-numbers .middle {
         position: relative;
